Fix Overflow Text on Dashboard
30.6.2021

--- a/GroceryStoreManagement/web/storeowner/css/gsm-storeowner-stylesheet1.css
+++ b/GroceryStoreManagement/web/storeowner/css/gsm-storeowner-stylesheet1.css
@@ -7564,16 +7564,32 @@ button.bg-dark:focus {
     box-shadow: none !important;
 }
 
+.w-20 {
+    width: 20% !important;
+}
+
 .w-25 {
     width: 25% !important;
+}
+
+.w-35 {
+    width: 35% !important;
 }
 
 .w-50 {
     width: 50% !important;
 }
 
+.w-65 {
+    width: 65% !important;
+}
+
 .w-75 {
     width: 75% !important;
+}
+
+.w-80 {
+    width: 80% !important;
 }
 
 .w-100 {
